--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-full-screen": "^1.1.0",
     "react-icons": "^4.2.0",
     "react-pdf": "^5.3.2",
     "react-router-dom": "^5.2.0",
